# actguard-cli

./: .gitignore  LICENSE  README.md  deep_analysis.py  env.example  eu_compliance.py  github_fetch.py  pyproject.toml
.github/workflows/: ci.yml
actguard/: __init__.py  cli.py  config.py  generate.py  output.py  pipeline.py  plan.py  session.py
actguard/agent/: __init__.py  apply.py  diff.py  fix.py  git.py  patch.py  progress.py  tasks.py
actguard/llm/: __init__.py  config.py  mistral.py  openai_compatible.py
actguard/services/: __init__.py  report_service.py  scan_service.py
deploy/: __init__.py  extras.py  fingerprint.py  gates.py  matcher.py  providers.yaml  rollout.py  signals.py
docs/: cursor-mcp.md
export/: build_artifacts.py
legal_rag/: __init__.py  build_index.py  chunker.py  retrieve.py
legal_texts/: ai_act.html  data_act.html  dsa.html  gdpr.html  nis2.html
mcp_server/: __init__.py  server.py
parsing/: implementation_parser.py  preprocess.py  report_parser.py
readiness/: __init__.py  engine.py  review.py  rules.py
scanner/: known_packages.py
skills/actguard/: SKILL.md
tests/: test_cli_session.py  test_deploy_dogfood.py  test_deploy_fingerprint.py  test_deploy_matcher.py  test_fix_diff.py  test_fix_patch.py  test_fix_tasks.py  test_founder_extras.py  test_implementation_parser.py  test_llm_config.py  test_mcp_server.py  test_plan_bundle.py  test_preprocess.py  test_readiness_engine.py  test_readiness_immigration.py  test_report_parser.py  test_scanner_excludes.py
tests/fixtures/: deploy_repos.py  sample_implementation.py  sample_report.py
