[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actguard"
version = "0.4.0"
description = "Local EU compliance CLI — scan codebases, generate markdown artifacts (BYOK)"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "ActGuard contributors" }]
keywords = ["eu", "compliance", "ai-act", "gdpr", "legaltech", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mistralai>=2.4.9",
    "python-dotenv>=1.2.2",
    "chromadb",
    "sentence-transformers",
    "beautifulsoup4",
    "lxml",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "markdown>=3.7",
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/YOUR_USER/actguard-cli"
Repository = "https://github.com/YOUR_USER/actguard-cli"
Documentation = "https://github.com/YOUR_USER/actguard-cli#readme"

[project.scripts]
actguard = "actguard.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["eu_compliance", "deep_analysis", "github_fetch"]

[tool.setuptools.packages.find]
include = [
    "actguard*",
    "mcp_server*",
    "legal_rag*",
    "legal_texts*",
    "readiness*",
    "deploy*",
    "parsing*",
    "export*",
    "scanner*",
]

[tool.setuptools.package-data]
legal_texts = ["*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
